utils/harbor/make/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harbor
spec:
  rules:
  - host: node2
    http:
      paths:
      - path: /
        backend:
          serviceName: core
          servicePort: 80
      - path: /v2
        backend:
          serviceName: registry
          servicePort: repo
      - path: /service
        backend:
          serviceName: core
          servicePort: 80
